# search-algorithms

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  todo.md
src/: App.zig  Boxes.zig  Maze.zig  algorithms.c  algorithms.h  c.zig  cast.zig  containers.zig  graph.c  graph.h  graph.zig  main.c  main.zig  math.zig  search.zig  ui.zig
src/algorithms/: breadthFirst.c  breadthFirst.h  depthFirst.c  depthFirst.h
src/graph/: methods.c  methods.h  types.h
